@@ -1,5 +1,0 @@
-.wc-stripe-upe-method-selection .wc-stripe-upe-method-selection__name,
-.wc-stripe-upe-method-selection .wc-stripe-upe-method-selection__description,
-.wc-stripe-upe-method-selection .wc-stripe-upe-method-selection__status {
-	vertical-align: middle;
-}
