@@ -74,38 +74,28 @@ class WC_Stripe_Settings_Controller {
 
 		$suffix = defined( 'SCRIPT_DEBUG' ) && SCRIPT_DEBUG ? '' : '.min';
 
-		if ( WC_Stripe_Feature_Flags::is_upe_settings_redesign_enabled() ) {
-			// Webpack generates an assets file containing a dependencies array for our built JS file.
-			$script_asset_path = WC_STRIPE_PLUGIN_PATH . '/build/upe_settings.asset.php';
-			$script_asset      = file_exists( $script_asset_path )
-				? require $script_asset_path
-				: [
-					'dependencies' => [],
-					'version'      => WC_STRIPE_VERSION,
-				];
+		// Webpack generates an assets file containing a dependencies array for our built JS file.
+		$script_asset_path = WC_STRIPE_PLUGIN_PATH . '/build/upe_settings.asset.php';
+		$script_asset      = file_exists( $script_asset_path )
+			? require $script_asset_path
+			: [
+				'dependencies' => [],
+				'version'      => WC_STRIPE_VERSION,
+			];
 
-			wp_register_script(
-				'woocommerce_stripe_admin',
-				plugins_url( 'build/upe_settings.js', WC_STRIPE_MAIN_FILE ),
-				$script_asset['dependencies'],
-				$script_asset['version'],
-				true
-			);
-			wp_register_style(
-				'woocommerce_stripe_admin',
-				plugins_url( 'build/upe_settings.css', WC_STRIPE_MAIN_FILE ),
-				[ 'wc-components' ],
-				$script_asset['version']
-			);
-		} else {
-			wp_register_script( 'woocommerce_stripe_admin', plugins_url( 'assets/js/stripe-admin' . $suffix . '.js', WC_STRIPE_MAIN_FILE ), [], WC_STRIPE_VERSION, true );
-			wp_register_style(
-				'woocommerce_stripe_admin',
-				plugins_url( 'assets/css/stripe-admin-styles' . $suffix . '.css', WC_STRIPE_MAIN_FILE ),
-				[],
-				WC_STRIPE_VERSION
-			);
-		}
+		wp_register_script(
+			'woocommerce_stripe_admin',
+			plugins_url( 'build/upe_settings.js', WC_STRIPE_MAIN_FILE ),
+			$script_asset['dependencies'],
+			$script_asset['version'],
+			true
+		);
+		wp_register_style(
+			'woocommerce_stripe_admin',
+			plugins_url( 'build/upe_settings.css', WC_STRIPE_MAIN_FILE ),
+			[ 'wc-components' ],
+			$script_asset['version']
+		);
 
 		$oauth_url = woocommerce_gateway_stripe()->connect->get_oauth_url();
 		if ( is_wp_error( $oauth_url ) ) {
