@@ -301,15 +301,9 @@ class WC_Gateway_Stripe extends WC_Stripe_Payment_Gateway {
 	}
 
 	/**
-	 * Maybe override the parent admin_options method.
+	 * Override the parent admin_options method.
 	 */
 	public function admin_options() {
-		if ( ! WC_Stripe_Feature_Flags::is_upe_settings_redesign_enabled() ) {
-			parent::admin_options();
-
-			return;
-		}
-
 		do_action( 'wc_stripe_gateway_admin_options_wrapper', $this );
 	}
 
