@@ -2,6 +2,7 @@
 
 = 5.x.x - 2021-xx-xx =
 * Add - Add Stripe API to generate connection tokens, manage terminal locations, create customers.
+* Tweak - Remove `_wcstripe_feature_upe` flag and all traces of old settings.
 
 = 5.8.1 - 2021-11-23 =
 * Fix - Run filters that disable Stripe JS on cart and product pages when PRBs are disabled.
